--- a/index.html
+++ b/index.html
@@ -167,18 +167,27 @@
         </div>
             <div class="row justify-content-center">
               <div class="col-md-6">
-            <form>
+                <div class="alert alert-success alert-dismissible fade show btn-kirim d-none my-alert" role="alert">
+                  <strong>Thank you Bestie!</strong> Massage use successful, have a nice day :).
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            <form name="my-portfolio-contact">
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="Email" aria-describedby="email" />
+                <input type="email" class="form-control" id="Email" aria-describedby="email" name="email" />
                 <div class="mb-3">
                   <label for="pesan" class="form-label">Pesan</label>
-                  <textarea class="form-control" id="pesan" rows="3"></textarea>
+                  <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                 </div>
-              <button type="Kirim" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">kirim</button>
+            </button>
+            <button class="btn btn-primary  btn-loading d-none" type="button" disabled>
+              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              Loading...
+            </button>
             </form>
         </div>
       </div>
@@ -193,5 +202,33 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzKVY1cq9IF3i1GtluM4g8wxXiMYwLm2jH2G_FMDsdHdkdrEKc0nkQk5axQ_IfmpatWpw/exec'
+      const form = document.forms['my-portfolio-contact'];
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert')
+    
+      form.addEventListener('submit', e => {
+        e.preventDefault();
+        // ketika tombol  submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then(response => {
+            // tampilkan tombol kirim, hilangkan tombol loading
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            // Tampilkan alert
+            myAlert.classList.toggle('d-none')
+            // reset formnya
+            form.reset();
+            console.log('Success!', response)
+          })
+          .catch(error => console.error('Error!', error.message));
+      });
+    </script>
   </body>
 </html>
